# money_scheduler

./: README.md  db.sqlite3  pyproject.toml
config/: urls.py
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_outcome_note.py  0003_alter_outcome_date.py  0003_outcome_is_passed.py  0004_alter_outcome_date.py  0004_alter_outcome_id.py  0005_merge_0004_alter_outcome_date_0004_alter_outcome_id.py  0006_alter_outcome_is_passed.py
dashboard/module/: ope_db.py
dashboard/static/dashboard/css/: style.css
dashboard/templates/: base.html
dashboard/templates/dashboard/: form.html  index.html
